# scraping

gramscraper/: README.md  pyproject.toml
gramscraper/conf/base/: logging.yml
gramscraper/conf/base/parameters/: data_collection.yml
gramscraper/docs/source/: conf.py  index.rst
gramscraper/src/: requirements.txt  setup.py
gramscraper/src/gramscraper/: __init__.py  __main__.py  settings.py
gramscraper/src/gramscraper/pipelines/data_collection/: README.md  __init__.py  nodes.py  pipeline.py  scraper.py
gramscraper/src/tests/: test_run.py
gramscraper/src/tests/pipelines/data_collection/: test_pipeline.py
